--- a/app/index.html
+++ b/app/index.html
@@ -3,8 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="cache-control" content="no-cache, must-revalidate, post-check=0, pre-check=0" />
+    <meta http-equiv="cache-control" content="max-age=0" />
+    <meta http-equiv="expires" content="0" />
+    <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
+    <meta http-equiv="pragma" content="no-cache" />
     <title>Scoreboard App Test</title>
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css?v=0.01">
     <script src="assets/js/app.js" defer></script>
 </head>
 <body>
@@ -224,9 +229,24 @@
                 </div>
             </section>
         </main>
-    
     </div> 
 
+<!-- =================================================================
+     POP-OUT LIGHTBOX (for Scoreboard & Controls)
+================================================================== -->
+<div id="pop-out-lightbox" class="hidden">
+  <!-- This overlay closes the modal when clicked -->
+  <div id="pop-out-overlay"></div>
+  
+  <!-- Content Wrapper -->
+  <div id="pop-out-content-wrapper">
+    <!-- Close Button -->
+    <img src="assets/images/pop-back-in.png" id="pop-out-close-btn" alt="Pop back in">
+    
+    <!-- The cloned content will be injected here by JavaScript -->
+    <div id="pop-out-content"></div>
+  </div>
+</div>
 
     <div id="video-lightbox" class="hidden">
         <div id="video-player-container">
