Update for new template system
Now have a theme control to switch to different look feel for Zombie theme.

--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css?v=0.01">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css?v=0.02">
     <script src="assets/js/app.js" defer></script>
 </head>
 <body>
@@ -55,9 +55,14 @@
                     <img id="bases_image" src="assets/images/baseball-field-no-runners.jpg" alt="Bases Empty">
                 </div>
             </section>
-           
+
               <div class="pop-out-container">
               <img src="assets/images/pop-out-launcher.png" id="pop-out-controls-btn" class="pop-out-btn" alt="Controls Pop-out">
+              </div>
+
+              <div class="theme-link-container">
+              <img src="assets/images/themes.png" id="themes-image" class="themes-image" alt="Themes Picker">
+              <a href="zombie-index.html">ZOMBIE</a>
               </div>
 
              <section id="control-panel" class="app-panel">
